--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "lint": "eslint --fix --ext .js,.ts .",
     "build": "tsc",
-    "build:watch": "tsc --watch"
+    "build:watch": "tsc --watch",
+    "dev": "nodemon ./lib/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -18,6 +19,7 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "dotenv": "^16.1.4",
     "eslint": "^8.0.1",
@@ -25,7 +27,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "nodemon": "^2.0.22",
     "typescript": "*"
-  },
-  "type": "module"
+  }
 }
