--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "lint": "eslint --fix --ext .js,.ts .",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "dev": "nodemon ./lib/index.js"
+    "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
     "express": "^4.18.2",
     "firebase-admin": "^11.9.0",
     "openai": "^3.2.1",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "dotenv": "^16.1.4",
@@ -28,6 +30,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^2.0.22",
-    "typescript": "*"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.5.2"
   }
 }
