--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint --fix --ext .js,.ts .",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "dev": "nodemon ./src/index.ts"
+    "dev": "nodemon ./src/index.ts",
+    "start": "node ./lib/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
