--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:watch": "tsc --watch",
     "dev": "nodemon ./src/index.ts",
     "start": "node ./lib/index.js",
-    "deploy": "gcloud builds submit --config cloudbuild.yaml"
+    "deploy": "gcloud builds submit --region=global"
     
   },
   "dependencies": {
